# AsciiAdventure

./: .gitignore  CMakeLists.txt  README.md
images/: testMap.tmx
images/DawnLike/Characters/: Player1.json
images/DawnLike/jsonImageFiles/: GUI0.json  Player0.json  Player1.json
include/: AbstractCameraManager.h  AbstractImageLoaderManager.h  AbstractImageLoaderManagerFactory.h  AbstractImageManager.h  AbstractImageManagerFactory.h  AbstractPlayerController.h  AbstractWorldManager.h  CMakeLists.txt  CameraManager.h  ImageLoaderManager.h  ImageLoaderManagerFactory.h  ImageManager.h  ImageManagerFactory.h  Main.h  PlayerController.h  WorldManager.h
src/: CameraManager.cpp  CmakeLists.txt  ImageLoaderManager.cpp  ImageLoaderManagerFactory.cpp  ImageManager.cpp  ImageManagerFactory.cpp  Main.cpp  PlayerController.cpp  WorldManager.cpp  main.cpp  sdl.c
