set(include_files
    AbstractImageManagerFactory.h
    AbstractImageLoaderManagerFactory.h
    AbstractImageManager.h
    AbstractImageLoaderManager.h
    ImageManager.h
    ImageLoaderManager.h
    ImageManagerFactory.h
    ImageLoaderManagerFactory.h
    Main.h
)

add_library(include ${include_files})